rem materialicons + lazysizes

--- a/config/theme.yml
+++ b/config/theme.yml
@@ -1,5 +1,5 @@
-name: classic-rocket
-display_name: Classic Rocket
+name: classic-wmi
+display_name: Studio WMI
 version: 3.1.0
 author:
   name: "Prestarocket"
